--- a/math/note04.ipynb
+++ b/math/note04.ipynb
@@ -251,6 +251,7 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "# Define the coefficients matrix A and the right-hand side vector b\n",
     "print('Solving Ax=b via matrix inversion')\n",
     "\n",
