--- a/_sources/math/note04.ipynb
+++ b/_sources/math/note04.ipynb
@@ -40,6 +40,10 @@
     "\n",
     "  $$e_1 = (1, 0, 0), \\,\\, e_2 = (0, 1, 0), \\,\\, e_3 = (0, 0, 1)$$\n",
     "\n",
+    "- Here is an example of vector $v$ in terms of unit vectors of euclidean space.\n",
+    "\n",
+    "  $$v = (2,3,4) = 2e_1+3e_2+4e_3$$\n",
+    "\n",
     "- In a different coordinate system or basis, the same vector will have different components, but its intrinsic properties remain unchanged. This flexibility in representation is a fundamental concept in quantum mechanics and linear algebra.\n",
     "\n",
     "\n",
@@ -57,9 +61,7 @@
     "\\mathbf{v} = 2 \\mathbf{e_1} + 3 \\mathbf{e_2}\n",
     "$$\n",
     "\n",
-    "Where:\n",
-    "- $ \\mathbf{e_1} = \\begin{pmatrix} 1 \\\\ 0 \\end{pmatrix}$ \n",
-    "- $\\mathbf{e_2} = \\begin{pmatrix} 0 \\\\ 1 \\end{pmatrix}$\n",
+    "- Where: $ \\mathbf{e_1} = \\begin{pmatrix} 1 \\\\ 0 \\end{pmatrix}$  and $\\mathbf{e_2} = \\begin{pmatrix} 0 \\\\ 1 \\end{pmatrix}$\n",
     "\n",
     "Now, suppose we switch to a new basis, where each new basis vector is a scalar multiple of the standard basis vectors. Let’s define the new basis vectors as:\n",
     "\n",
@@ -110,11 +112,6 @@
     "### Vector Operations\n",
     "\n",
     "What defines vectors in a mathematical framework are the operations performed on them. Let’s illustrate these operations using a simple 2D vector as an example:\n",
-    "\n",
-    "$$\\mid a \\rangle = a_1 \\mid e_1 \\rangle + a_2 \\mid e_2 \\rangle$$\n",
-    "\n",
-    "\n",
-    "$$\\mid b \\rangle = b_1 \\mid e_1 \\rangle + b_2 \\mid e_2 \\rangle$$\n",
     "\n",
     "#### 1. Addition or Subtraction\n",
     "\n",
@@ -174,14 +171,17 @@
     "\n",
     "This system can be written compactly in matrix form as:\n",
     "\n",
+    ":::{admonition} **A system of linear equation as matrix vector product**\n",
+    "\n",
     "$$\n",
     "A \\mathbf{x} = \\mathbf{b}\n",
     "$$\n",
     "\n",
-    "Where:\n",
     "- $A$ is a matrix containing the coefficients of the system,\n",
     "- $\\mathbf{x}$ is the vector of unknowns, and\n",
     "- $\\mathbf{b}$ is the vector of constants (right-hand side).\n",
+    "\n",
+    ":::\n",
     "\n",
     "For a 2D system, this becomes:\n",
     "\n",
@@ -201,7 +201,7 @@
     "\\end{pmatrix}\n",
     "$$\n",
     "\n",
-    "### Matrix Multiplication\n",
+    "### Matrix vector Multiplication\n",
     "\n",
     "**Row by column product rule**\n",
     "\n",
@@ -218,7 +218,7 @@
     "This shows how the system of equations is equivalent to multiplying the matrix by the vector.\n",
     "\n",
     "\n",
-    "### Lower level definition of Matrix Multiplication\n",
+    "**Lower level definition of Matrix Multiplication**\n",
     "\n",
     "In general, if $A$ is an $m \\times n$ matrix and $\\mathbf{x}$ is a vector of dimension $n$, the matrix-vector multiplication $A \\mathbf{x}$ is defined as:\n",
     "\n",
@@ -227,6 +227,18 @@
     "$$\n",
     "\n",
     "Where $a_{ij}$ are the elements of matrix $A$, and $x_j$ are the components of vector $\\mathbf{x}$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{admonition} **Solving linear equation via matrix Inversion**\n",
+    ":class: important\n",
+    "\n",
+    "$${\\bf x} = A^{-1}{\\bf b}$$\n",
+    "\n",
+    ":::"
    ]
   },
   {
@@ -239,6 +251,7 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "# Define the coefficients matrix A and the right-hand side vector b\n",
     "print('Solving Ax=b via matrix inversion')\n",
     "\n",
@@ -410,214 +423,6 @@
     "                 b=widgets.IntSlider(min=-5, max=5, value=0, description=\"b\"),\n",
     "                 c=widgets.IntSlider(min=-5, max=5, value=0, description=\"c\"),\n",
     "                 d=widgets.IntSlider(min=-5, max=5, value=1, description=\"d\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Commuting and non-commuting matrices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-input"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# Redefine non-commuting matrices for more distinct transformations\n",
-    "C = np.array([[0, -1], [1, 0]])  # 90-degree rotation matrix\n",
-    "D = np.array([[1, 2], [0, 1]])  # Horizontal shear\n",
-    "\n",
-    "# Compute the products C*D and D*C (non-commuting case)\n",
-    "CD = C @ D\n",
-    "DC = D @ C\n",
-    "\n",
-    "# Apply the transformations\n",
-    "CD_vector = CD @ vector\n",
-    "DC_vector = DC @ vector\n",
-    "\n",
-    "# Create subplots for commuting and non-commuting cases\n",
-    "fig, axs = plt.subplots(2, 2, figsize=(12, 12))\n",
-    "\n",
-    "# Plot 1: A * B (commuting matrices)\n",
-    "axs[0, 0].axhline(0, color='black',linewidth=0.5)\n",
-    "axs[0, 0].axvline(0, color='black',linewidth=0.5)\n",
-    "axs[0, 0].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
-    "axs[0, 0].quiver(0, 0, AB_vector[0], AB_vector[1], angles='xy', scale_units='xy', scale=1, color='red', label='A * B Vector')\n",
-    "axs[0, 0].set_xlim(-10, 10)\n",
-    "axs[0, 0].set_ylim(-10, 10)\n",
-    "axs[0, 0].set_title('Commuting: A * B')\n",
-    "axs[0, 0].legend()\n",
-    "axs[0, 0].grid(True)\n",
-    "axs[0, 0].set_aspect('equal', adjustable='box')\n",
-    "\n",
-    "# Plot 2: B * A (commuting matrices)\n",
-    "axs[0, 1].axhline(0, color='black',linewidth=0.5)\n",
-    "axs[0, 1].axvline(0, color='black',linewidth=0.5)\n",
-    "axs[0, 1].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
-    "axs[0, 1].quiver(0, 0, BA_vector[0], BA_vector[1], angles='xy', scale_units='xy', scale=1, color='green', label='B * A Vector')\n",
-    "axs[0, 1].set_xlim(-10, 10)\n",
-    "axs[0, 1].set_ylim(-10, 10)\n",
-    "axs[0, 1].set_title('Commuting: B * A')\n",
-    "axs[0, 1].legend()\n",
-    "axs[0, 1].grid(True)\n",
-    "axs[0, 1].set_aspect('equal', adjustable='box')\n",
-    "\n",
-    "# Plot 3: C * D (non-commuting matrices)\n",
-    "axs[1, 0].axhline(0, color='black',linewidth=0.5)\n",
-    "axs[1, 0].axvline(0, color='black',linewidth=0.5)\n",
-    "axs[1, 0].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
-    "axs[1, 0].quiver(0, 0, CD_vector[0], CD_vector[1], angles='xy', scale_units='xy', scale=1, color='purple', label='C * D Vector')\n",
-    "axs[1, 0].set_xlim(-10, 10)\n",
-    "axs[1, 0].set_ylim(-10, 10)\n",
-    "axs[1, 0].set_title('Non-Commuting: C * D')\n",
-    "axs[1, 0].legend()\n",
-    "axs[1, 0].grid(True)\n",
-    "axs[1, 0].set_aspect('equal', adjustable='box')\n",
-    "\n",
-    "# Plot 4: D * C (non-commuting matrices)\n",
-    "axs[1, 1].axhline(0, color='black',linewidth=0.5)\n",
-    "axs[1, 1].axvline(0, color='black',linewidth=0.5)\n",
-    "axs[1, 1].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
-    "axs[1, 1].quiver(0, 0, DC_vector[0], DC_vector[1], angles='xy', scale_units='xy', scale=1, color='orange', label='D * C Vector')\n",
-    "axs[1, 1].set_xlim(-10, 10)\n",
-    "axs[1, 1].set_ylim(-10, 10)\n",
-    "axs[1, 1].set_title('Non-Commuting: D * C')\n",
-    "axs[1, 1].legend()\n",
-    "axs[1, 1].grid(True)\n",
-    "axs[1, 1].set_aspect('equal', adjustable='box')\n",
-    "\n",
-    "# Display the plots\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Application: Hopfield Neural Networks \n",
-    "\n",
-    "A **Hopfield network** is a type of recurrent neural network where all neurons are connected to each other. It is commonly used for **associative memory**—storing and recalling patterns. The network evolves to a stable state, recalling a stored pattern when given noisy or incomplete input. We can understand its behavior using matrix and vector operations.\n",
-    "\n",
-    "### Components of a Hopfield Network\n",
-    "\n",
-    "1. **Neurons (States)**:\n",
-    "   Each neuron has a binary state, either $1$ (active) or $-1$ (inactive). The state of all neurons is represented by a vector $\\mathbf{s}$. For a network of 3 neurons, the state vector might be:\n",
-    "\n",
-    "   $$\n",
-    "   \\mathbf{s} = \\begin{pmatrix} 1 \\\\ -1 \\\\ 1 \\end{pmatrix}\n",
-    "   $$\n",
-    "\n",
-    "2. **Weights (Connections)**:\n",
-    "   Neurons are connected by weights, represented by a symmetric matrix $W$. For a 3-neuron network, the weight matrix might look like:\n",
-    "\n",
-    "   $$\n",
-    "   W = \\begin{pmatrix}\n",
-    "   0 & w_{12} & w_{13} \\\\\n",
-    "   w_{21} & 0 & w_{23} \\\\\n",
-    "   w_{31} & w_{32} & 0\n",
-    "   \\end{pmatrix}\n",
-    "   $$\n",
-    "\n",
-    "   The diagonal elements are zero because a neuron does not connect to itself.\n",
-    "\n",
-    "3. **Update Rule**:\n",
-    "   To update the state of neuron $i$, we calculate the weighted sum of inputs from all other neurons:\n",
-    "\n",
-    "   $$\n",
-    "   h_i = \\sum_{j} w_{ij} s_j = (W \\mathbf{s})_i\n",
-    "   $$\n",
-    "\n",
-    "   If $h_i > 0$, the neuron becomes active ($s_i = 1$). If $h_i < 0$, the neuron becomes inactive ($s_i = -1$).\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Example: Simple Hopfield Network\n",
-    "\n",
-    "Let’s consider a 3-neuron Hopfield network with the following weight matrix:\n",
-    "\n",
-    "$$\n",
-    "W = \\begin{pmatrix}\n",
-    "0 & 1 & -1 \\\\\n",
-    "1 & 0 & 1 \\\\\n",
-    "-1 & 1 & 0\n",
-    "\\end{pmatrix}\n",
-    "$$\n",
-    "\n",
-    "#### Initial State\n",
-    "\n",
-    "Assume the initial state of the network is:\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{s} = \\begin{pmatrix} 1 \\\\ -1 \\\\ 1 \\end{pmatrix}\n",
-    "$$\n",
-    "\n",
-    "#### Update Neurons\n",
-    "\n",
-    "We update each neuron based on the weighted inputs:\n",
-    "\n",
-    "1. **Neuron 1**:\n",
-    "   The input to neuron 1 is:\n",
-    "\n",
-    "   $$\n",
-    "   h_1 = W_{11}s_1 + W_{12}s_2 + W_{13}s_3 = 0 \\cdot 1 + 1 \\cdot (-1) + (-1) \\cdot 1 = -2\n",
-    "   $$\n",
-    "\n",
-    "   Since $h_1 < 0$, the new state of neuron 1 is $s_1 = -1$.\n",
-    "\n",
-    "2. **Neuron 2**:\n",
-    "   The input to neuron 2 is:\n",
-    "\n",
-    "   $$\n",
-    "   h_2 = W_{21}s_1 + W_{22}s_2 + W_{23}s_3 = 1 \\cdot 1 + 0 \\cdot (-1) + 1 \\cdot 1 = 2\n",
-    "   $$\n",
-    "\n",
-    "   Since $h_2 > 0$, the new state of neuron 2 is $s_2 = 1$.\n",
-    "\n",
-    "3. **Neuron 3**:\n",
-    "   The input to neuron 3 is:\n",
-    "\n",
-    "   $$\n",
-    "   h_3 = W_{31}s_1 + W_{32}s_2 + W_{33}s_3 = (-1) \\cdot 1 + 1 \\cdot (-1) + 0 \\cdot 1 = -2\n",
-    "   $$\n",
-    "\n",
-    "   Since $h_3 < 0$, the new state of neuron 3 is $s_3 = -1$.\n",
-    "\n",
-    "#### New State\n",
-    "\n",
-    "After one round of updates, the new state of the network is:\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{s} = \\begin{pmatrix} -1 \\\\ 1 \\\\ -1 \\end{pmatrix}\n",
-    "$$\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Storing Patterns and Energy\n",
-    "\n",
-    "A Hopfield network stores specific patterns by adjusting the weights, and it evolves to minimize its **energy**. The energy of the network is defined as:\n",
-    "\n",
-    "$$\n",
-    "E = -\\frac{1}{2} \\sum_{i,j} w_{ij} s_i s_j = -\\frac{1}{2} \\mathbf{s}^T W \\mathbf{s}\n",
-    "$$\n",
-    "\n",
-    "As the network updates, it reduces its energy until it reaches a stable state, which corresponds to one of the stored patterns.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Summary\n",
-    "\n",
-    "- **Neurons** are represented by a state vector $\\mathbf{s}$.\n",
-    "- **Weights** between neurons are represented by a matrix $W$.\n",
-    "- Neurons update their states based on the weighted sum of inputs, which is a matrix-vector multiplication.\n",
-    "- The network evolves to stable patterns by minimizing its energy function.\n",
-    "\n",
-    "This is a basic introduction to the Hopfield network using matrix and vector operations. "
    ]
   }
  ],
