--- a/_sources/math/note05.ipynb
+++ b/_sources/math/note05.ipynb
@@ -99,7 +99,7 @@
     "\n",
     "### Numeric Example: Applying the Derivative Matrix for $\\psi(x) = x^2$\n",
     "\n",
-    "Let’s consider the function $\\psi(x) = x^2$ sampled at 5 points $x = [0, 1, 2, 3, 4]$, giving us:\n",
+    "Let’s consider the function $\\psi(x) = x^2$ sampled at 5 points $x = (0, 1, 2, 3, 4)$, giving us:\n",
     "\n",
     "$$ \\psi = \\begin{pmatrix}\n",
     "    0 \\\\\n",
@@ -175,6 +175,191 @@
     "derivative_psi = D_1 @ psi\n",
     "\n",
     "psi, derivative_psi  # Display the original function an"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matrix Multiplication\n",
+    "\n",
+    ":::{admonition} **Matrix multiplicaiton as row by column product**\n",
+    "\n",
+    "$$\\bf C = AB$$\n",
+    "\n",
+    "$$C_ij = \\sum_k A_{ik} B_{kj}$$\n",
+    "\n",
+    ":::\n",
+    "\n",
+    "- **Powers of matrix** Multiplying same matrix we end up with different powers. E.g second derivative matrix can be obtained by multiplying two first order derivative matrices\n",
+    "\n",
+    "$$A \\cdot A = A^2$$\n",
+    "\n",
+    "- **Identity matrix** I is a special matrix with ones on diagonal and zeroes everywhere else. Mutliplying by I leaves matrix intact\n",
+    "\n",
+    "$$I\\cdot A = A\\cdot I = A$$\n",
+    "\n",
+    "- **Inverse of a Matrix A** is a matrix $A^{-1} multiplication with which returns identity matrix:\n",
+    "\n",
+    "$$A^{-1}\\cdot A = I$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Why matrix mulitplication order matters\n",
+    "\n",
+    "- In linear algebra, matrix multiplication is generally **not commutative**, meaning that for two matrices $A$ and $B$, it's usually the case that:\n",
+    "\n",
+    "$$\n",
+    "A B \\neq B A\n",
+    "$$\n",
+    "\n",
+    "To illustrate why this happens, let’s consider an example with 2D matrices.\n",
+    "\n",
+    "### Example: Non-commuting Matrices\n",
+    "\n",
+    "Let’s define two 2D matrices $A$ and $B$:\n",
+    "\n",
+    "$$\n",
+    "A = \\begin{pmatrix} 1 & 2 \\\\ 0 & 1 \\end{pmatrix}, \\quad B = \\begin{pmatrix} 0 & 1 \\\\ 1 & 0 \\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "We will compute $AB$ and $BA$ to show that they are not equal.\n",
+    "\n",
+    "#### Compute $AB$\n",
+    "\n",
+    "$$\n",
+    "AB = \\begin{pmatrix} 1 & 2 \\\\ 0 & 1 \\end{pmatrix} \\begin{pmatrix} 0 & 1 \\\\ 1 & 0 \\end{pmatrix} = \\begin{pmatrix}\n",
+    "(1 \\cdot 0 + 2 \\cdot 1) & (1 \\cdot 1 + 2 \\cdot 0) \\\\\n",
+    "(0 \\cdot 0 + 1 \\cdot 1) & (0 \\cdot 1 + 1 \\cdot 0)\n",
+    "\\end{pmatrix} = \\begin{pmatrix} 2 & 1 \\\\ 1 & 0 \\end{pmatrix}\n",
+    "$$ \n",
+    "\n",
+    "#### Compute $BA$\n",
+    "\n",
+    "$$\n",
+    "BA = \\begin{pmatrix} 0 & 1 \\\\ 1 & 0 \\end{pmatrix} \\begin{pmatrix} 1 & 2 \\\\ 0 & 1 \\end{pmatrix} = \\begin{pmatrix}\n",
+    "(0 \\cdot 1 + 1 \\cdot 0) & (0 \\cdot 2 + 1 \\cdot 1) \\\\\n",
+    "(1 \\cdot 1 + 0 \\cdot 0) & (1 \\cdot 2 + 0 \\cdot 1)\n",
+    "\\end{pmatrix} = \\begin{pmatrix} 0 & 1 \\\\ 1 & 2 \\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "#### Compare $AB$ and $BA$\n",
+    "\n",
+    "We now have:\n",
+    "\n",
+    "$$\n",
+    "AB = \\begin{pmatrix} 2 & 1 \\\\ 1 & 0 \\end{pmatrix}, \\quad BA = \\begin{pmatrix} 0 & 1 \\\\ 1 & 2 \\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "Clearly, $AB \\neq BA$.\n",
+    "\n",
+    "### Why Don’t Matrices Commute?\n",
+    "\n",
+    "- The reason matrix multiplication is not commutative generally lies in how matrix multiplication is performed. Matrix multiplication involves combining rows of the first matrix with columns of the second matrix. \n",
+    "\n",
+    "- These operations usually yield different results because the effect of applying transformations in different orders changes the outcome. \n",
+    "\n",
+    "- For example: One matrix might represent a shear transformation and another a rotation. Applying the shear first and then the rotation will generally give a different result than applying the rotation first and then the shear.\n",
+    "\n",
+    "### Special Cases\n",
+    "\n",
+    "There are some special cases where matrices do commute:\n",
+    "\n",
+    "- **Diagonal matrices**: If $A$ and $B$ are both diagonal matrices, then $AB = BA$  because each entry in the diagonal simply scales the corresponding entry in the other matrix.\n",
+    "\n",
+    "- **Identity matrix**: The identity matrix $I$ commutes with any matrix $A$, i.e., $IA = AI = A$, because multiplying by the identity matrix leaves the original matrix unchanged."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Define two commuting matrices (scaling matrices)\n",
+    "A = np.array([[2, 0], [0, 0.5]])\n",
+    "B = np.array([[3, 0], [0, 0.75]])\n",
+    "\n",
+    "# Compute the products A*B and B*A\n",
+    "AB = A @ B\n",
+    "BA = B @ A\n",
+    "\n",
+    "# Redefine non-commuting matrices for more distinct transformations\n",
+    "C = np.array([[0, -1], [1, 0]])  # 90-degree rotation matrix\n",
+    "D = np.array([[1, 2], [0, 1]])  # Horizontal shear\n",
+    "\n",
+    "# Compute the products C*D and D*C (non-commuting case)\n",
+    "CD = C @ D\n",
+    "DC = D @ C\n",
+    "\n",
+    "# Apply the transformations\n",
+    "CD_vector = CD @ vector\n",
+    "DC_vector = DC @ vector\n",
+    "\n",
+    "# Create subplots for commuting and non-commuting cases\n",
+    "fig, axs = plt.subplots(2, 2, figsize=(12, 12))\n",
+    "\n",
+    "# Plot 1: A * B (commuting matrices)\n",
+    "axs[0, 0].axhline(0, color='black',linewidth=0.5)\n",
+    "axs[0, 0].axvline(0, color='black',linewidth=0.5)\n",
+    "axs[0, 0].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
+    "axs[0, 0].quiver(0, 0, AB_vector[0], AB_vector[1], angles='xy', scale_units='xy', scale=1, color='red', label='A * B Vector')\n",
+    "axs[0, 0].set_xlim(-10, 10)\n",
+    "axs[0, 0].set_ylim(-10, 10)\n",
+    "axs[0, 0].set_title('Commuting: A * B')\n",
+    "axs[0, 0].legend()\n",
+    "axs[0, 0].grid(True)\n",
+    "axs[0, 0].set_aspect('equal', adjustable='box')\n",
+    "\n",
+    "# Plot 2: B * A (commuting matrices)\n",
+    "axs[0, 1].axhline(0, color='black',linewidth=0.5)\n",
+    "axs[0, 1].axvline(0, color='black',linewidth=0.5)\n",
+    "axs[0, 1].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
+    "axs[0, 1].quiver(0, 0, BA_vector[0], BA_vector[1], angles='xy', scale_units='xy', scale=1, color='green', label='B * A Vector')\n",
+    "axs[0, 1].set_xlim(-10, 10)\n",
+    "axs[0, 1].set_ylim(-10, 10)\n",
+    "axs[0, 1].set_title('Commuting: B * A')\n",
+    "axs[0, 1].legend()\n",
+    "axs[0, 1].grid(True)\n",
+    "axs[0, 1].set_aspect('equal', adjustable='box')\n",
+    "\n",
+    "# Plot 3: C * D (non-commuting matrices)\n",
+    "axs[1, 0].axhline(0, color='black',linewidth=0.5)\n",
+    "axs[1, 0].axvline(0, color='black',linewidth=0.5)\n",
+    "axs[1, 0].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
+    "axs[1, 0].quiver(0, 0, CD_vector[0], CD_vector[1], angles='xy', scale_units='xy', scale=1, color='purple', label='C * D Vector')\n",
+    "axs[1, 0].set_xlim(-10, 10)\n",
+    "axs[1, 0].set_ylim(-10, 10)\n",
+    "axs[1, 0].set_title('Non-Commuting: C * D')\n",
+    "axs[1, 0].legend()\n",
+    "axs[1, 0].grid(True)\n",
+    "axs[1, 0].set_aspect('equal', adjustable='box')\n",
+    "\n",
+    "# Plot 4: D * C (non-commuting matrices)\n",
+    "axs[1, 1].axhline(0, color='black',linewidth=0.5)\n",
+    "axs[1, 1].axvline(0, color='black',linewidth=0.5)\n",
+    "axs[1, 1].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
+    "axs[1, 1].quiver(0, 0, DC_vector[0], DC_vector[1], angles='xy', scale_units='xy', scale=1, color='orange', label='D * C Vector')\n",
+    "axs[1, 1].set_xlim(-10, 10)\n",
+    "axs[1, 1].set_ylim(-10, 10)\n",
+    "axs[1, 1].set_title('Non-Commuting: D * C')\n",
+    "axs[1, 1].legend()\n",
+    "axs[1, 1].grid(True)\n",
+    "axs[1, 1].set_aspect('equal', adjustable='box')\n",
+    "\n",
+    "# Display the plots\n",
+    "plt.show()\n"
    ]
   },
   {
