--- a/_sources/math/note04.ipynb
+++ b/_sources/math/note04.ipynb
@@ -382,6 +382,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize action of a matrix on several vectors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Lets pick four vectors and act our matrix on all of them to see how the relationship between their distances and angles changes\n",
+    "\n",
+    "$$(0,0), (0.5,0.5), (0.5, 1.5), (0,1), (0,0)$$\n",
+    "\n",
+    "- We connect the points defined by this vectors to aid our visualization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -391,38 +409,179 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from ipywidgets import widgets\n",
-    "from ipywidgets.widgets import interact, interactive\n",
+    "import numpy as np\n",
     "\n",
-    "def matrix_transform(a=1, b=0, c=0, d=1):\n",
-    "    matrix = np.array([[a, b], [c, d]])\n",
-    "    vector = np.array([[5], [5]])\n",
-    "    transformed_vector = np.dot(matrix, vector)\n",
-    "    \n",
-    "    fig, ax = plt.subplots(figsize=(6, 6))\n",
-    "    \n",
-    "    # Original vector (blue)\n",
-    "    ax.quiver(0, 0, vector[0, 0], vector[1, 0], angles='xy', scale_units='xy', scale=1, color='b', label=\"Original Vector\")\n",
-    "    \n",
-    "    # Transformed vector (red)\n",
-    "    ax.quiver(0, 0, transformed_vector[0, 0], transformed_vector[1, 0], angles='xy', scale_units='xy', scale=1, color='r', label=\"Transformed Vector\")\n",
-    "    \n",
-    "    ax.set_xlim([-10, 10])\n",
-    "    ax.set_ylim([-10, 10])\n",
-    "    ax.axvline(x=0, color='grey', lw=1)\n",
-    "    ax.axhline(y=0, color='grey', lw=1)\n",
-    "    ax.grid(True, which='both')\n",
-    "    ax.legend()\n",
-    "    \n",
-    "    plt.show()\n",
+    "coords = np.array([[0,0],[0.5,0.5], [0.5,1.5], [0,1], [0,0]] )\n",
+    "coords = coords.transpose()\n",
     "\n",
-    "widgets.interact(matrix_transform, \n",
-    "                 a=widgets.IntSlider(min=-5, max=5, value=1, description=\"a\"),\n",
-    "                 b=widgets.IntSlider(min=-5, max=5, value=0, description=\"b\"),\n",
-    "                 c=widgets.IntSlider(min=-5, max=5, value=0, description=\"c\"),\n",
-    "                 d=widgets.IntSlider(min=-5, max=5, value=1, description=\"d\"))"
+    "x = coords[0,:]\n",
+    "y = coords[1,:]\n",
+    "\n",
+    "# Create the figure and axes objects\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Plot the points.  x and y are original vectors, x_LT1 and y_LT1 are images\n",
+    "ax.plot(x,y,'ro')\n",
+    "\n",
+    "ax.axis([-2,2,-1,2])\n",
+    "# Connect the points by lines\n",
+    "ax.plot(x,y,'r',ls=\"--\", label='x')\n",
+    "ax.grid(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Stretch matrix A\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "A = \\left[ \\begin{array}{cc} 2 & 0 \\\\ 0 & 1 \\end{array}\\right]\n",
+    "\\end{equation}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "A = np.array([[2,0],[0,1]]) \n",
+    "\n",
+    "A_coords = A@coords\n",
+    "\n",
+    "###\n",
+    "x_LT1 = A_coords[0,:]\n",
+    "y_LT1 = A_coords[1,:]\n",
+    "\n",
+    "# Create the figure and axes objects\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Plot the points.  x and y are original vectors, x_LT1 and y_LT1 are images\n",
+    "ax.plot(x,y,'ro')\n",
+    "ax.plot(x_LT1,y_LT1,'bo')\n",
+    "\n",
+    "# Connect the points by lines\n",
+    "ax.plot(x,y,'r',ls=\"--\", label='x')\n",
+    "ax.plot(x_LT1,y_LT1,'b', label='Ax')\n",
+    "\n",
+    "# Edit some settings \n",
+    "ax.axvline(x=0,color=\"k\",ls=\":\")\n",
+    "ax.axhline(y=0,color=\"k\",ls=\":\")\n",
+    "ax.grid(True)\n",
+    "ax.axis([-2,2,-1,2])\n",
+    "ax.set_aspect('equal')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Rotation matrix R\n",
+    "\n",
+    "To rotate vectors in the plane, we choose an angle $\\theta$ and write down the matrix that represents the rotation counterclockwise by an angle $\\theta$.  Basic trigonometry can be used to calculate the columns in this case.   \n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "R = \\left[ \\begin{array}{cc} \\cos\\theta & -\\sin\\theta \\\\ \\sin\\theta & \\cos\\theta \\end{array}\\right]\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "theta = pi/6\n",
+    "R = np.array([[cos(theta),-sin(theta)],[sin(theta),cos(theta)]])\n",
+    "R_coords = R@coords\n",
+    "\n",
+    "x_LT3 = R_coords[0,:]\n",
+    "y_LT3 = R_coords[1,:]\n",
+    "\n",
+    "# Create the figure and axes objects\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Plot the points.  x and y are original vectors, x_LT1 and y_LT1 are images\n",
+    "ax.plot(x,y,'ro')\n",
+    "ax.plot(x_LT3,y_LT3,'bo')\n",
+    "\n",
+    "# Connect the points by lines\n",
+    "ax.plot(x,y,'r',ls=\"--\")\n",
+    "ax.plot(x_LT3,y_LT3,'b')\n",
+    "\n",
+    "# Edit some settings \n",
+    "ax.axvline(x=0,color=\"k\",ls=\":\")\n",
+    "ax.axhline(y=0,color=\"k\",ls=\":\")\n",
+    "ax.grid(True)\n",
+    "ax.axis([-2,2,-1,2])\n",
+    "ax.set_aspect('equal')\n",
+    "ax.set_title(\"Rotation\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Shear Matrix, S\n",
+    "\n",
+    "In the study of mechanics, shear forces occur when one force acts on some part of a body while a second force acts on another part of the body but in the opposite direction. To visualize this, imagine a deck of playing cards resting on the table, and then while resting your hand on top of the deck, sliding your hand parallel to the table. \n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "S= \\left[ \\begin{array}{cc} 1 & 2 \\\\ 0 & 1 \\end{array}\\right]\n",
+    "\\end{equation}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "S = np.array([[1,2],[0,1]])\n",
+    "S_coords = S@coords\n",
+    "\n",
+    "x_LT4 = S_coords[0,:]\n",
+    "y_LT4 = S_coords[1,:]\n",
+    "\n",
+    "\n",
+    "# Create the figure and axes objects\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Plot the points.  x and y are original vectors, x_LT1 and y_LT1 are images\n",
+    "ax.plot(x,y,'ro')\n",
+    "ax.plot(x_LT4,y_LT4,'bo')\n",
+    "\n",
+    "# Connect the points by lines\n",
+    "ax.plot(x,y,'r',ls=\"--\")\n",
+    "ax.plot(x_LT4,y_LT4,'b')\n",
+    "\n",
+    "# Edit some settings \n",
+    "ax.axvline(x=0,color=\"k\",ls=\":\")\n",
+    "ax.axhline(y=0,color=\"k\",ls=\":\")\n",
+    "ax.grid(True)\n",
+    "ax.axis([-2,4,-1,2])\n",
+    "ax.set_aspect('equal')\n",
+    "ax.set_title(\"Shear\");"
    ]
   }
  ],
