--- a/math/note04.ipynb
+++ b/math/note04.ipynb
@@ -453,6 +453,9 @@
    },
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
     "A = np.array([[2,0],[0,1]]) \n",
     "\n",
     "A_coords = A@coords\n",
@@ -505,7 +508,10 @@
    },
    "outputs": [],
    "source": [
-    "theta = pi/6\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "theta = np.pi/6\n",
     "R = np.array([[cos(theta),-sin(theta)],[sin(theta),cos(theta)]])\n",
     "R_coords = R@coords\n",
     "\n",
@@ -557,6 +563,9 @@
    },
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
     "S = np.array([[1,2],[0,1]])\n",
     "S_coords = S@coords\n",
     "\n",
