--- a/_sources/math/note05.ipynb
+++ b/_sources/math/note05.ipynb
@@ -66,38 +66,14 @@
     "\\end{pmatrix}\n",
     "$$\n",
     "\n",
-    "For a function represented as a vector $\\psi = (\\psi(x_1), \\psi(x_2), \\dots, \\psi(x_5))$, applying this matrix gives the derivative at each point (except the boundary).\n",
-    "\n",
-    "\n",
-    "#### Example: Second Derivative as a Matrix\n",
-    "\n",
-    "Similarly, the second derivative can be approximated by a central difference formula:\n",
-    "\n",
-    "$$ \\frac{d^2\\psi}{dx^2} \\approx \\frac{\\psi(x_{i+1}) - 2\\psi(x_i) + \\psi(x_{i-1})}{h^2} $$\n",
-    "\n",
-    "The corresponding second derivative matrix $D_2$ for $n = 5$ grid points is:\n",
-    "\n",
-    "$$\n",
-    "D_2 = \\frac{1}{h^2}\n",
-    "\\begin{pmatrix}\n",
-    "-2 & 1 & 0 & 0 & 0 \\\\\n",
-    "1 & -2 & 1 & 0 & 0 \\\\\n",
-    "0 & 1 & -2 & 1 & 0 \\\\\n",
-    "0 & 0 & 1 & -2 & 1 \\\\\n",
-    "0 & 0 & 0 & 1 & -2\n",
-    "\\end{pmatrix}\n",
-    "$$\n",
-    "\n",
-    "Applying this matrix to the vector $\\psi$ gives the second derivative of the function at each point."
+    "For a function represented as a vector $\\psi = (\\psi(x_1), \\psi(x_2), \\dots, \\psi(x_5))$, applying this matrix gives the derivative at each point (except the boundary)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "### Numeric Example: Applying the Derivative Matrix for $\\psi(x) = x^2$\n",
+    "### Numerical example of Applying the Derivative Matrix for $\\psi(x) = x^2$\n",
     "\n",
     "Let’s consider the function $\\psi(x) = x^2$ sampled at 5 points $x = (0, 1, 2, 3, 4)$, giving us:\n",
     "\n",
@@ -174,7 +150,99 @@
     "# Apply the first derivative matrix to the function vector\n",
     "derivative_psi = D_1 @ psi\n",
     "\n",
-    "psi, derivative_psi  # Display the original function an"
+    "print('derivative of x^2', derivative_psi)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Second Derivative as a Matrix\n",
+    "\n",
+    "Similarly, the second derivative can be approximated by a central difference formula:\n",
+    "\n",
+    "$$ \\frac{d^2\\psi}{dx^2} \\approx \\frac{\\psi(x_{i+1}) - 2\\psi(x_i) + \\psi(x_{i-1})}{h^2} $$\n",
+    "\n",
+    "The corresponding second derivative matrix $D_2$ for $n = 5$ grid points is:\n",
+    "\n",
+    "$$\n",
+    "D_2 = \\frac{1}{h^2}\n",
+    "\\begin{pmatrix}\n",
+    "-2 & 1 & 0 & 0 & 0 \\\\\n",
+    "1 & -2 & 1 & 0 & 0 \\\\\n",
+    "0 & 1 & -2 & 1 & 0 \\\\\n",
+    "0 & 0 & 1 & -2 & 1 \\\\\n",
+    "0 & 0 & 0 & 1 & -2\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "Applying this matrix to the vector $\\psi$ gives the second derivative of the function at each point."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Define the grid points and function\n",
+    "n = 5\n",
+    "x = np.linspace(0, 4, n)  # Grid points from 0 to 4\n",
+    "h = x[1] - x[0]  # Spacing between points\n",
+    "\n",
+    "psi = x**2  # Function psi(x) = x^2\n",
+    "\n",
+    "# Define the first derivative matrix D_1\n",
+    "D_1 = (1/h) * np.array([\n",
+    "    [-1, 1, 0, 0, 0],\n",
+    "    [0, -1, 1, 0, 0],\n",
+    "    [0, 0, -1, 1, 0],\n",
+    "    [0, 0, 0, -1, 1],\n",
+    "    [0, 0, 0, 0, 0]\n",
+    "])\n",
+    "\n",
+    "print('second derivative matrix \\n', D_1 @ D_1)\n",
+    "\n",
+    "print('second derivative of x^2 \\n', D_1 @ D_1@x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Define the grid points and function\n",
+    "n = 100\n",
+    "x = np.linspace(0, 4, n)  # Grid points from 0 to 4\n",
+    "h = x[1] - x[0]  # Spacing between points\n",
+    "\n",
+    "psi = x**2  # Function psi(x) = x^2\n",
+    "# Define the centered difference approximation for the second derivative matrix\n",
+    "D_2_centered = (1/h**2) * np.array([\n",
+    "    [1, -2, 1, 0, 0],\n",
+    "    [1, -2, 1, 0, 0],\n",
+    "    [0, 1, -2, 1, 0],\n",
+    "    [0, 0, 1, -2, 1],\n",
+    "    [0, 0, 0, 1, -2]\n",
+    "])\n",
+    "\n",
+    "# Calculate the second derivative of x^2 using the centered difference method\n",
+    "second_derivative_centered = D_2_centered @ psi\n",
+    "\n",
+    "print('second derivative of x^2 by using centered difference \\n', D_1 @ D_1@x)"
    ]
   },
   {
@@ -257,7 +325,7 @@
     "\n",
     "Clearly, $AB \\neq BA$.\n",
     "\n",
-    "### Why Don’t Matrices Commute?\n",
+    "#### Why Don’t Matrices Commute?\n",
     "\n",
     "- The reason matrix multiplication is not commutative generally lies in how matrix multiplication is performed. Matrix multiplication involves combining rows of the first matrix with columns of the second matrix. \n",
     "\n",
@@ -286,6 +354,8 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "vector = np.array([1,1])\n",
     "\n",
     "# Define two commuting matrices (scaling matrices)\n",
     "A = np.array([[2, 0], [0, 0.5]])\n",
