--- a/_sources/math/note04.ipynb
+++ b/_sources/math/note04.ipynb
@@ -520,7 +520,8 @@
     "import numpy as np\n",
     "\n",
     "theta = np.pi/6\n",
-    "R = np.array([[cos(theta),-sin(theta)],[sin(theta),cos(theta)]])\n",
+    "R = np.array([[  np.cos(theta), -np.sin(theta)],\n",
+    "                [np.sin(theta),  np.cos(theta)]])\n",
     "R_coords = R@coords\n",
     "\n",
     "x_LT3 = R_coords[0,:]\n",
